src/objects/c2g__codaCashEntry__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcashentry</customHelpPage>
    <description>Stores the master details of cash and checks received from, or refunds given to, customer.</description>
    <fields>
        <fullName>c2g__AccountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 1)</relationshipLabel>
        <relationshipName>CashEntriesAcDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 2)</relationshipLabel>
        <relationshipName>CashEntriesAcDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 3)</relationshipLabel>
        <relationshipName>CashEntriesAcDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountCurrency__c</fullName>
        <formula>c2g__BankAccount__r.c2g__BankAccountCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 1)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 2)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 3)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CancelingCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canceling Cash Entry Number</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CancelingCashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryRate__c</fullName>
        <label>Cash Entry Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bank Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesGLADimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 1)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesGLADimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 2)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesGLADimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 3)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charges GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date on the cheque, etc.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <description>An optional description of the item</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <description>The reason the item was discarded (canceled)</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FromIntercompanyTransfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Intercompany Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LineCharges__c</fullName>
        <label>Line Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NetBanked__c</fullName>
        <formula>c2g__BankAccountValue__c  -  c2g__TotalCharges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Banked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NetValue__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Cash Entry Number</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>OriginalCashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMethod__c</fullName>
        <description>The type of payment</description>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Number</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( c2g__Status__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( c2g__Transaction__r.c2g__DocumentOutstandingTotal__c == 0,&apos;Paid&apos;,
if( c2g__Transaction__r.c2g__DocumentTotal__c == c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference__c</fullName>
        <description>Any reference number from the registered item, such as giro #</description>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SignedBankCharge__c</fullName>
        <formula>IF( text(c2g__Type__c) = &quot;Refund&quot;, c2g__ChargesAmount__c *-1, c2g__ChargesAmount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Bank Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SignedNetBanked__c</fullName>
        <formula>IF( text(c2g__Type__c) = &quot;Refund&quot;, c2g__NetBanked__c *-1, c2g__NetBanked__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Net Banked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <description>The status of the item</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__TotalCharges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <description>The direction of payment</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Receipt</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount in home currency</description>
        <label>Cash Entry Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveBankAccountDimensions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Bank Account Dimensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveBankAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveBankChargesAnalysis__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Bank Charges Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <label>Cash Entry</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__Date__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Reference__c</columns>
        <columns>c2g__PaymentNumber__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__BankAccountCurrency__c</columns>
        <columns>c2g__NetBanked__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSH{000000}</displayFormat>
        <label>Cash Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>